tests/security/taintThroughTemplatedProperty/output.txt
ERROR: TaintedData - input.hack:22:10 - Data from a URL query string found its way to an HTML tag using path